test: Affording tests to new error handling