@@ -128,6 +128,19 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                    <argLine>-Dmockito.automatic-inline-mock-maker=false
+                        -Dmockito.mock-maker=mock-maker-subclass -Djdk.attach.allowAttachSelf=true
+                        -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+
 		</plugins>
 	</build>
 
